# cvs

./: .gitignore  CHANGELOG.md  Dockerfile.site  Dockerfile.ui  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
apps/basis_builder/: __init__.py  _pew_extraction.py  _taxonomy_completion.py  _wvs_extraction.py  centroids.py  coverage_report.py  ethnic_crosswalk.py  geometries.py  (+17 more)
data_sources/: SOURCES.md
docs/: 01_conceptual_model.md  02_source_only_methodology.md  03_state_first_scope.md  04_adm1_preparation_policy.md  06_outputs_and_storage.md  07_ethics_publication_policy.md  08_civilizational_basis.md  09_civilizational_mechanics.md  10_distance_algebra.md  11_critiques_and_responses.md  12_empirical_validation.md  13_sensitivity_analysis.md  14_baseline_unsupervised.md  17_continuous_field.md
schemas/: adm1_profile.v2.schema.json  basis.schema.json  macro_civilizations.schema.json  state_coordinates.schema.json  state_moment.schema.json  state_profile.v2.schema.json
taxonomies/: macro_civilizations.v2.json
tests/: conftest.py  test_adm1_anticipation.py  test_aggregate_indicators.py  test_bases_coupling.py  test_continuous_field.py  test_continuous_field_v2.py  test_continuous_field_v3.py  test_distance_algebra.py  test_documentary_basis.py  test_ethnic_crosswalk.py  test_imputation_cascade.py  test_load_geoepr_sccs_glottolog.py  test_moment_mechanics.py  test_plates_and_faults.py  test_site_build.py  test_support_strategies.py  test_tensor_mechanics.py  test_ui_smoke.py  test_vector_basis.py  test_vulgarisation.py
(+764 files in other folders)
