[project]
name = "civvec"
version = "3.0.0a1"
description = "Civilizational Vector State — two-bases (B_doc + B_vec) civilizational affiliation engine with tensor mechanics and distance algebra."
requires-python = ">=3.11"
authors = [
  { name = "s-geffroy" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "jsonschema>=4.22",
  "jinja2>=3.1",
  "Pillow>=10.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.35",
  "plotly>=5.22",
]
basis = []
site = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
civvec = "apps.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
exclude = ["tests*", "site_src*", "outputs*", "build_site*", "dist*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
